--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,21 @@
   text-decoration: none;
   display: block;
 }
+.face {
+	border-radius: 50%;
+}
+.intro {
+	display: grid;
+	grid-template-columns: 5fr 6fr;
+	color: #FFFFFF;
+	text-align: center;
+	background-color: #37A000;
+
+}
+.intro .column p i{
+	margin-right: 2em;
+	padding: 1em;
+}
 .gallery {
 	display: grid;
 	grid-template-columns: 50% 50%;
